--- a/bitcoinsafe/bitcoinsafe.html
+++ b/bitcoinsafe/bitcoinsafe.html
@@ -15,140 +15,218 @@
     />
   </head>
   <body>
-    <svg
-      width="110%"
-      height="110%"
-      fill="none"
-      xmlns="http://www.w3.org/2000/svg"
-      id="vector"
-    >
-      <path
-        d="M556.477 -344.044C691.256 -298.142 474.245 104.055 1127.31 104.055C1472.18 104.055 1397.86 432.661 1605.97 455.977"
-        stroke="#181059"
-      />
-      <path
-        d="M821.085 -531.151C955.864 -485.248 738.853 -83.0516 1391.92 -83.0516C1736.79 -83.0516 1662.47 245.555 1870.58 268.87"
-        stroke="#181059"
-      />
-      <path
-        d="M-251 -142.649C-32.251 -171.781 415.611 -171.822 325.777 -0.0571689C177.123 284.172 527.121 563.41 1461.49 618.607"
-        stroke="#181059"
-      />
-      <path
-        d="M-552.477 -36.7098C-282.079 -72.6616 271.529 -72.7132 160.483 139.265C-23.2692 490.035 409.368 834.648 1564.35 902.767"
-        stroke="#181059"
-      />
-      <path
-        d="M-831.946 140.532C-525.849 99.8195 100.847 99.7611 -24.859 339.809C-232.871 737.029 256.884 1127.28 1564.35 1204.41"
-        stroke="#181059"
-      />
-    </svg>
-
-    <div class="container-fluid" style="background-color: #f6f5fa">
-      <div
-        class="row"
-        style="height: 10vh; background-color: rgb(246, 245, 250)"
-      >
-        <div class="col-lg-12 text-center align-self-end" id="title">
-          Bitcoin Safe
-        </div>
-      </div>
-      <div
-        class="row"
-        style="height: min(25vw, 25vh); background-color: rgb(246, 245, 250)"
-      >
-        <div class="col-6 offset-3 text center" id="description">
-          Bitcoin Safe is a compilation of reviews by the top bitcoin security
-          experts to provide objective information on how to best store your
-          bitcoin according to your needs
-        </div>
-      </div>
-
-      <div
-        class="row"
-        style="background-color: rgb(246, 245, 250)"
-        id="toggle-box"
-      >
-        <div class="col-4 offset-4 text-center">
-          <label for="" id="highsecurity">High Security</label>
-          <input type="checkbox" id="toggle" onchange="handleToggle()" />
-          <label for="" id="fastsetup">Fast Setup</label>
-        </div>
-      </div>
-
-      <div class="row my-auto" style="padding: 50px" id="products">
-        <div class="col-12">
-          <div class="row justify-content-around">
-            <div
-              class="col-* text-left"
-              id="product-1"
-              style="
-                height: 417px;
-                width: 280px;
-                padding: 20px;
-                border-radius: 24px;
-                text-overflow: ellipsis;
-              "
-            ></div>
-            <div
-              class="col-*"
-              id="product-2"
-              style="
-                height: 417px;
-                width: 280px;
-                padding: 20px;
-                border-radius: 24px;
-              "
-            ></div>
-            <div
-              class="col-* text-white"
-              id="product-3"
-              style="
-                height: 417px;
-                width: 280px;
-                padding: 20px;
-                border-radius: 24px;
-              "
-            ></div>
-            <div
-              class="col-*"
-              id="product-4"
-              style="
-                height: 417px;
-                width: 280px;
-                padding: 20px;
-                border-radius: 24px;
-              "
-            ></div>
-          </div>
-        </div>
-      </div>
-
-      <div
-        class="row text-center"
-        style="background-color: rgb(246, 245, 250); color: #181059"
-      >
-        <div class="col-12">
-          <div class="row text-center">
-            <div class="col-12" id="title">Contributors</div>
-          </div>
-          <div
-            class="row align-content-center justify-content-around"
-            id="contributors"
-          ></div>
-        </div>
-      </div>
-
-      <div class="row text-center align-content-center">
-        <div class="col-4 offset-4" id="bottom">
-          <a
-            href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSDR-NwIbu4SrbJtvoR_rBQvW66t4FNaMO2yxv7xuXgisyLChxZHSRUGcBcDVkP5x1Up6up8NDGqxL9/pubhtml#"
-            style="color: #181059"
-            >Go to Raw Data</a
-          >
-        </div>
-      </div>
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+      <h1 class="display-4" id="title">Bitcoin Safe</h1>
+      <p class="lead" id="description">
+        Bitcoin Safe is a compilation of reviews by the top bitcoin security
+        experts to provide objective information on how to best store your
+        bitcoin according to your needs
+      </p>
     </div>
+
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+      <label for="" id="highsecurity">High Security</label>
+      <input type="checkbox" id="toggle" onchange="handleToggle()" />
+      <label for="" id="fastsetup">Fast Setup</label>
+    </div>
+
+    <div class="container">
+      <div class="card-deck mb-3 text-center">
+        <div class="card mb-4 box-shadow" id="product-1">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal" id="product-1-title"></h4>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled mt-3 mb-4" id="product-1-list"></ul>
+            <button type="button" class="btn btn-lg btn-block btn-primary">
+              Get started
+            </button>
+          </div>
+        </div>
+
+        <div class="card mb-4 box-shadow" id="product-2">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal" id="product-2-title"></h4>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled mt-3 mb-4" id="product-2-list"></ul>
+            <button type="button" class="btn btn-lg btn-block btn-primary">
+              Get started
+            </button>
+          </div>
+        </div>
+        <div class="card mb-4 box-shadow" id="product-3">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal" id="product-3-title"></h4>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled mt-3 mb-4" id="product-3-list"></ul>
+            <button type="button" class="btn btn-lg btn-block btn-primary">
+              Get started
+            </button>
+          </div>
+        </div>
+        <div class="card mb-4 box-shadow" id="product-4">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal" id="product-4-title"></h4>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled mt-3 mb-4" id="product-4-list"></ul>
+            <button type="button" class="btn btn-lg btn-block btn-primary">
+              Get started
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="container marketing">
+        <!-- Three columns of text below the carousel -->
+        <div
+          class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center"
+        >
+          <h1 class="display-4">Contributors</h1>
+        </div>
+        <div class="row" id="contributors">
+          <div class="col-lg-3">
+            <img
+              class="rounded-circle"
+              src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+              alt="Generic placeholder image"
+              width="140"
+              height="140"
+            />
+            <h2>Heading</h2>
+            <p>Donec sed odio dui.</p>
+            <p>
+              <a class="btn btn-secondary" href="#" role="button"
+                >View details »</a
+              >
+            </p>
+          </div>
+          <!-- /.col-lg-3 -->
+          <div class="col-lg-3">
+            <img
+              class="rounded-circle"
+              src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+              alt="Generic placeholder image"
+              width="140"
+              height="140"
+            />
+            <h2>Heading</h2>
+            <p>Duis mollis, est non commodo luctus</p>
+            <p>
+              <a class="btn btn-secondary" href="#" role="button"
+                >View details »</a
+              >
+            </p>
+          </div>
+          <!-- /.col-lg-3 -->
+          <div class="col-lg-3">
+            <img
+              class="rounded-circle"
+              src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+              alt="Generic placeholder image"
+              width="140"
+              height="140"
+            />
+            <h2>Heading</h2>
+            <p>Donec sed odio dui.</p>
+            <p>
+              <a class="btn btn-secondary" href="#" role="button"
+                >View details »</a
+              >
+            </p>
+          </div>
+          <!-- /.col-lg-3 -->
+          <div class="col-lg-3">
+            <img
+              class="rounded-circle"
+              src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+              alt="Generic placeholder image"
+              width="140"
+              height="140"
+            />
+            <h2>Heading</h2>
+            <p>Donec sed odio dui.</p>
+            <p>
+              <a class="btn btn-secondary" href="#" role="button"
+                >View details »</a
+              >
+            </p>
+          </div>
+          <!-- /.col-lg-3 -->
+        </div>
+        <!-- /.row -->
+
+        <!-- START THE FEATURETTES -->
+      </div>
+
+      <footer class="pt-4 my-md-5 pt-md-5 border-top">
+        <div class="row">
+          <div class="col-12 col-md">
+            <img
+              class="mb-2"
+              src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg"
+              alt=""
+              width="24"
+              height="24"
+            />
+            <small class="d-block mb-3 text-muted">© 2017-2018</small>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Features</h5>
+            <ul class="list-unstyled text-small">
+              <li>
+                <a
+                  href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSDR-NwIbu4SrbJtvoR_rBQvW66t4FNaMO2yxv7xuXgisyLChxZHSRUGcBcDVkP5x1Up6up8NDGqxL9/pubhtml#"
+                  style="color: #181059"
+                  >Go to Raw Data</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Resources</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">Resource</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>About</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">Team</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
     <script src="bitcoinsafe.js"></script>
+
+    <!--    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      window.jQuery ||
+        document.write(
+          '<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>'
+        );
+    </script>
+    <script src="../../assets/js/vendor/popper.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="../../assets/js/vendor/holder.min.js"></script>
+    <script>
+      Holder.addTheme("thumb", {
+        bg: "#55595c",
+        fg: "#eceeef",
+        text: "Thumbnail",
+      });
+    </script>
+-->
   </body>
 </html>
